--- a/pdf/static/pdf/css/styles.css
+++ b/pdf/static/pdf/css/styles.css
@@ -95,10 +95,37 @@
   margin-left: -5px;
 }
 
-#runImageSingle {
+#step1Button {
   display: none;
 }
 
 #runImageAll {
   display: none;
+}
+
+#leftNav { 
+  width: 150px;
+  border-right: 1px solid black;
+}
+
+#mainContent {
+  margin-left: 20px;
+}
+
+.scroll-container {
+  width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  border: 1px solid #cccccc;
+  padding: 10px;
+}
+
+.scrollable-content {
+  display: inline-block;
+}
+
+.resizer {
+  width: 10px;
+  cursor: col-resize;
 }
