--- a/pdf/templates/pdf/index.html
+++ b/pdf/templates/pdf/index.html
@@ -36,7 +36,7 @@
                     <input type="file" id="step1" accept="application/pdf" onchange="showImage(event)">
                   </div>
                   <div>
-                    <button id="step1Button" onclick="runStep('1', '2', 'pdfToImagePages')">Convert PDF Page 1 to Image</button>
+                    <button id="step1Button" onclick="runStep('1', '2', 'pdfToImagePages', '1')">Convert PDF Page 1 to Image</button>
                   </div>
                 </div>
                 <div id="runImageAll">
@@ -52,10 +52,13 @@
         <script>
 
           var latestStep = 2;
+          var buttonCount = 1;
+          var fileName = "file.pdf";
 
           function showImage(event) {
             const file = event.target.files[0];
             if (file) {
+                fileName = file.name;
                 const reader = new FileReader();
                 reader.onload = function(e) {
                     const img = document.getElementById("step1");
@@ -72,24 +75,30 @@
           function handleOption(outputStep) {
             const select = document.getElementById("step" + outputStep + "Select");
 
+            buttonCount = buttonCount + 1;
+
             if (select.value == "cropRotate" || select.value == "ocr") {
               latestStep = latestStep + 1;
             }
 
             if (select.value == "cropRotate") {
-              // TODO
               const newListItem = document.createElement('li');
-              var innerHTML = '<button id="step' + outputStep + 'Button" onclick="runStep(\'' + outputStep + '\', \'' + latestStep + '\', \'cropRotate\')">Run Crop & Rotate</button> ';
+              var innerHTML = '<button id="step' + buttonCount + 'Button" onclick="runStep(\'' + outputStep + '\', \'' + latestStep + '\', \'cropRotate\', \'' + buttonCount + '\')">Run Crop & Rotate</button> ';
+              innerHTML = innerHTML + '<input id="step' + buttonCount + 'X" type="number" min="0" step="1" placeholder="x" />';
+              innerHTML = innerHTML + '<input id="step' + buttonCount + 'Y" type="number" min="0" step="1" placeholder="y" />';
+              innerHTML = innerHTML + '<input id="step' + buttonCount + 'Width" type="number" min="1" step="1" placeholder="width" />';
+              innerHTML = innerHTML + '<input id="step' + buttonCount + 'Height" type="number" min="1" step="1" placeholder="height" />';
+              innerHTML = innerHTML + '<input id="step' + buttonCount + 'Rotation" type="number" min="0" step="1" placeholder="rotation" />';
               newListItem.innerHTML = innerHTML;
               document.getElementById("step" + outputStep + "Final").appendChild(newListItem);
             } else if (select.value == "ocr") {
               const newListItem = document.createElement('li');
-              var innerHTML = '<button id="step' + outputStep + 'Button" onclick="runStep(\'' + outputStep + '\', \'' + latestStep + '\', \'ocr\')">Run OCR</button> ';
+              var innerHTML = '<button id="step' + buttonCount + 'Button" onclick="runStep(\'' + outputStep + '\', \'' + latestStep + '\', \'ocr\', \'' + buttonCount + '\')">Run OCR</button> ';
               newListItem.innerHTML = innerHTML;
               document.getElementById("step" + outputStep + "Final").appendChild(newListItem);
             } else if (select.value == "next") {
               const newListItem = document.createElement('li');
-              var innerHTML = '<select id="step' + outputStep + 'Next" onchange="">';
+              var innerHTML = '<select id="step' + buttonCount + 'Next" onchange="">';
               innerHTML = innerHTML + getOtherSteps();
               innerHTML = innerHTML + '</select>';
               newListItem.innerHTML = innerHTML;
@@ -118,14 +127,20 @@
           }
 
 
-          async function runStep(inputStep, outputStep, command) {
-            document.getElementById("step" + inputStep + "Button").disabled = true;
-            document.getElementById("step" + inputStep + "Button").setAttribute('aria-busy', true);
+          async function runStep(inputStep, outputStep, command, buttonCount) {
+            document.getElementById("step" + buttonCount + "Button").disabled = true;
+            document.getElementById("step" + buttonCount + "Button").setAttribute('aria-busy', true);
 
             if (document.getElementById("step" + outputStep + "Container") != null) {
               document.getElementById("step" + outputStep + "Container").innerHTML = "";
               document.getElementById("step" + outputStep + "Code").innerHTML = "";
             }
+
+            var x = 0;
+            var y = 0;
+            var width = 1;
+            var height = 1;
+            var rotation = 0;
 
             const formData = new FormData();
             formData.append("command", command);
@@ -140,7 +155,33 @@
               } else if(command == "cropRotate") {
                 const imageInput = document.getElementById("step" + inputStep).src;
                 formData.append('image', imageInput);
-                // todo
+                
+                x = document.getElementById("step" + buttonCount + "X").value;
+                if (x == '') {
+                  document.getElementById("step" + buttonCount + "X").value = 0;
+                  x = 0;
+                }
+                y = document.getElementById("step" + buttonCount + "Y").value;
+                if (y == '') {
+                  document.getElementById("step" + buttonCount + "Y").value = 0;
+                  y = 0;
+                }
+                width = document.getElementById("step" + buttonCount + "Width").value;
+                if (width == '') {
+                  document.getElementById("step" + buttonCount + "Width").value = 1;
+                  width = 1;
+                }
+                height = document.getElementById("step" + buttonCount + "Height").value;
+                if (height == '') {
+                  document.getElementById("step" + buttonCount + "Height").value = 1;
+                  height = 1;
+                }
+                rotation = document.getElementById("step" + buttonCount + "Rotation").value;
+                if (rotation == '') {
+                  document.getElementById("step" + buttonCount + "Rotation").value = 0;
+                  rotation = 0;
+                }
+
                 formData.append('x', x);
                 formData.append('y', y);
                 formData.append('width', width);
@@ -160,8 +201,8 @@
 
               if (document.getElementById("step" + outputStep + "Container") != null) {
                 // Replace Step Section
-                var innerHTML = '<div id="step2Container" class="marginTop">';
-                if (command == "pdfToImagePages") {
+                var innerHTML = '';
+                if (command == "pdfToImagePages" || command == "cropRotate" ) {
                   innerHTML = innerHTML + '<div>';
                     innerHTML = innerHTML + '<h3>Step ' + outputStep + '</h3>';
                     innerHTML = innerHTML + '<div>PDF Page Image</div>';
@@ -184,20 +225,7 @@
                   innerHTML = innerHTML + '<select id="step' + outputStep + 'Select" onchange="handleOption(\'' + outputStep + '\')">';
                     innerHTML = innerHTML + '<option  value="selectOption">(Select Option)</option>';
                   innerHTML = innerHTML + '</select>';
-                } else if (command == "cropRotate") {
-
-                  // todo
-                  innerHTML = innerHTML + '<div>';
-                    innerHTML = innerHTML + '<h3>Step ' + outputStep + '</h3>';
-                    innerHTML = innerHTML + '<div>PDF Text</div>';
-                    innerHTML = innerHTML + '<textarea id="step' + outputStep + '" /></textarea>';
-                  innerHTML = innerHTML + '</div>';
-                  innerHTML = innerHTML + 'Add:';
-                  innerHTML = innerHTML + '<select id="step' + outputStep + 'Select" onchange="handleOption(\'' + outputStep + '\')">';
-                    innerHTML = innerHTML + '<option  value="selectOption">(Select Option)</option>';
-                  innerHTML = innerHTML + '</select>';
                 }
-                innerHTML = innerHTML + '</div>';
                 innerHTML = innerHTML + '<div id="step' + outputStep + 'FinalContainer" class="finalContainer" class="marginTop"><ol id="step' + outputStep + 'Final"></ol></div>';
                 document.getElementById("step" + outputStep + "Container").innerHTML = innerHTML;
 
@@ -207,8 +235,8 @@
                 const newDivContainer = document.createElement('div');
                 newDivContainer.id = "step" + outputStep + "Container";
                 newDivContainer.className = 'marginTop';
-                var innerHTML = '<div id="step2Container" class="marginTop">';
-                if (command == "pdfToImagePages") {
+                var innerHTML = '';
+                if (command == "pdfToImagePages" || command == "cropRotate") {
                   innerHTML = innerHTML + '<div>';
                     innerHTML = innerHTML + '<h3>Step ' + outputStep + '</h3>';
                     innerHTML = innerHTML + '<div>PDF Page Image</div>';
@@ -231,19 +259,7 @@
                   innerHTML = innerHTML + '<select id="step' + outputStep + 'Select" onchange="handleOption(\'' + outputStep + '\')">';
                     innerHTML = innerHTML + '<option  value="selectOption">(Select Option)</option>';
                   innerHTML = innerHTML + '</select>';
-                } else if (command == "cropRotate") {
-                  // todo
-                  innerHTML = innerHTML + '<div>';
-                    innerHTML = innerHTML + '<h3>Step ' + outputStep + '</h3>';
-                    innerHTML = innerHTML + '<div>PDF Text</div>';
-                    innerHTML = innerHTML + '<textarea id="step' + outputStep + '" /></textarea>';
-                  innerHTML = innerHTML + '</div>';
-                  innerHTML = innerHTML + 'Add:';
-                  innerHTML = innerHTML + '<select id="step' + outputStep + 'Select" onchange="handleOption(\'' + outputStep + '\')">';
-                    innerHTML = innerHTML + '<option  value="selectOption">(Select Option)</option>';
-                  innerHTML = innerHTML + '</select>';
                 }
-                innerHTML = innerHTML + '</div>';
                 innerHTML = innerHTML + '<div id="step' + outputStep + 'FinalContainer" class="finalContainer" class="marginTop"><ol id="step' + outputStep + 'Final"></ol></div>';
                 newDivContainer.innerHTML = innerHTML;
                 container.appendChild(newDivContainer);
@@ -253,12 +269,11 @@
               if (document.getElementById("step" + outputStep + "Code") != null) {
                 var innerHTML = "Step " + outputStep + ":<div><code>";
                 if(command == "pdfToImagePages") {
-                  innerHTML = innerHTML + "result" + outputStep + " = pdfToImagePages(file=file, page_number=1)";
+                  innerHTML = innerHTML + "result" + outputStep + " = pdfToImagePages(file='" + fileName + "', page_number=1)";
                 } else if (command == "ocr") {
                   innerHTML = innerHTML + "result" + outputStep + " = imageToText_Roboflow(file=result" + inputStep + ", api_key=ROBOFLOW_API_KEY_HERE)";
                 } else if (command == "cropRotate") {
-                  // todo
-                  innerHTML = innerHTML + "result" + outputStep + " = imageToText_Roboflow(file=result" + inputStep + ", api_key=ROBOFLOW_API_KEY_HERE)";
+                  innerHTML = innerHTML + "result" + outputStep + " = cropRotateImage(file=result" + inputStep + ", x=" + x + ", y=" + y + ", width=" + width + ", height=" + height + ", rotation_degrees=" + rotation + ", expand_for_rotation=True)";
                 }
                 innerHTML = innerHTML + "</code></div>";
                 document.getElementById("step" + outputStep + "Code").innerHTML = innerHTML;
@@ -270,12 +285,11 @@
                 newDivCodeblock.className = 'marginTop';
                 var innerHTML = "Step " + outputStep + ":<div><code>";
                 if(command == "pdfToImagePages") {
-                  innerHTML = innerHTML + "result" + outputStep + " = pdfToImagePages(file=file, page_number=1)";
+                  innerHTML = innerHTML + "result" + outputStep + " = pdfToImagePages(file='" + fileName + "', page_number=1)";
                 } else if (command == "ocr") {
                   innerHTML = innerHTML + "result" + outputStep + " = imageToText_Roboflow(file=result" + inputStep + ", api_key=ROBOFLOW_API_KEY_HERE)";
                 } else if (command == "cropRotate") {
-                  // todo
-                  innerHTML = innerHTML + "result" + outputStep + " = imageToText_Roboflow(file=result" + inputStep + ", api_key=ROBOFLOW_API_KEY_HERE)";
+                  innerHTML = innerHTML + "result" + outputStep + " = cropRotateImage(file=result" + inputStep + ", x=" + x + ", y=" + y + ", width=" + width + ", height=" + height + ", rotation_degrees=" + rotation + ", expand_for_rotation=True)";
                 }
                 innerHTML = innerHTML + "</code></div>";
                 newDivCodeblock.innerHTML = innerHTML;
@@ -292,8 +306,8 @@
                 textarea.value = data.result;
               }
 
-              document.getElementById("step" + inputStep + "Button").setAttribute('aria-busy', false);
-              document.getElementById("step" + inputStep + "Button").disabled = false;
+              document.getElementById("step" + buttonCount + "Button").setAttribute('aria-busy', false);
+              document.getElementById("step" + buttonCount + "Button").disabled = false;
               
           }
         </script>
