--- a/pdf/templates/pdf/index.html
+++ b/pdf/templates/pdf/index.html
@@ -209,7 +209,7 @@
                       innerHTML = innerHTML + '<option  value="selectOption">(Select Option)</option>';
                       innerHTML = innerHTML + '<option value="cropRotate">Crop & Rotate</option>';
                       innerHTML = innerHTML + '<option value="ocr">Get Text</option>';
-                      innerHTML = innerHTML + '<option value="next">Send to existing Step</option>';
+                      //innerHTML = innerHTML + '<option value="next">Send to existing Step</option>';
                     innerHTML = innerHTML + '</select>';
                   } else if (command == "ocr") {
                     innerHTML = innerHTML + '<div>';
@@ -243,7 +243,7 @@
                       innerHTML = innerHTML + '<option  value="selectOption">(Select Option)</option>';
                       innerHTML = innerHTML + '<option value="cropRotate">Crop & Rotate</option>';
                       innerHTML = innerHTML + '<option value="ocr">Get Text</option>';
-                      innerHTML = innerHTML + '<option value="next">Send to existing Step</option>';
+                      //innerHTML = innerHTML + '<option value="next">Send to existing Step</option>';
                     innerHTML = innerHTML + '</select>';
                   } else if (command == "ocr") {
                     innerHTML = innerHTML + '<div>';
